--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -1,38 +1,37 @@
-.icon-close{
-    position: absolute; 
-    top: 10px;
-    right: 10px;
+.icon-close {
+  position: absolute;
+  top: 10px;
+  right: 10px;
 
-    button{
-        color: rgba(254, 39, 39, 0.7);
-    }
+  button {
+    color: rgba(254, 39, 39, 0.7);
+  }
 }
 
-.button-confirm{
-    background-color: #7467EF !important;
-    :hover{
-        opacity: 0.7;
-        
-    }
+.button-confirm {
+  background-color: #7467ef !important;
+  :hover {
+    opacity: 0.7;
+  }
 }
 
-.button-confirm1{
-    background-color: #339999 !important;
-    :hover{
-        opacity: 0.7;
-    }
+.button-confirm1 {
+  background-color: #339999 !important;
+  :hover {
+    opacity: 0.7;
+  }
 }
 
-.button-cancel{
-    background-color: #FF9E43 !important;
-    :hover{
-        opacity: 0.7;
-    }
+.button-cancel {
+  background-color: #ff9e43 !important;
+  :hover {
+    opacity: 0.7;
+  }
 }
-
-.button-cancel1{
-    background-color: #f44336 !important;
-    :hover{
-        opacity: 0.7;
-    }
+.button-cancel1 {
+  background-color: #f44336 !important;
+  :hover {
+    opacity: 0.7;
+  }
 }
+// gdffdghfgdfs
