--- a/client/src/app/scenes/leadership_pending/Dialog/Dialog.scss
+++ b/client/src/app/scenes/leadership_pending/Dialog/Dialog.scss
@@ -119,15 +119,15 @@
     .MuiInputBase-root{
         .MuiInputBase-input{
             // // border-bottom:1px dotted #000;
-            // text-decoration: underline 1px dotted ;
-            // line-height: 2;
-            // text-underline-offset: 5px;
-            background-attachment: local;
-            background-image:
-                linear-gradient(to right, transparent 10px, transparent 10px),
-                linear-gradient(to left, transparent 10px, transparent 10px),
-                repeating-linear-gradient(transparent, transparent 30px, #ccc 30px, transparent 31px);
-            line-height: 31px;
+            text-decoration: underline 1px dotted ;
+            line-height: 2;
+            text-underline-offset: 5px;
+            // background-attachment: local;
+            // background-image:
+            //     linear-gradient(to right, transparent 10px, transparent 10px),
+            //     linear-gradient(to left, transparent 10px, transparent 10px),
+            //     repeating-linear-gradient(transparent, transparent 30px, #ccc 30px, transparent 31px);
+            // line-height: 31px;
         }
     }
 }
