--- a/client/src/app/scenes/leadership_pending/Dialog/Dialog.scss
+++ b/client/src/app/scenes/leadership_pending/Dialog/Dialog.scss
@@ -1,34 +1,33 @@
 
 .backgroundColor1{
-    background-color: #02a18b;
+    background-color: #2d353c;
 }
 
 .title{
-    font-size: 30px;
-    letter-spacing: 2px;
+    font-size: 28px;
     text-align: center;
-    color: #02a18b;
+    color: #2d353c;
     text-transform: uppercase;
 }
 
 .title-1{
-    font-size: 30px;
+    font-size: 20px;
     text-transform: uppercase;
     .MuiInputBase-root{
         input {
-            font-size: 30px;
+            font-size: 20px;
             text-transform: uppercase;
         }
     }
 }
 
 .title-2{
-    font-size: 22px;
+    font-size: 18px;
     font-weight: 600;
     text-transform: uppercase;
     .MuiInputBase-root{
         input{
-            font-size: 22px;
+            font-size: 18px;
             font-weight: 600;
             text-transform: uppercase;
             background-attachment: local;
@@ -44,47 +43,48 @@
 }
 
 .name{
-    font-size: 40px;
+    font-size: 28px;
     letter-spacing: 3.2px;
-    color: #02a18b;
+    color: #2d353c;
     text-transform: uppercase;
 }
 
 .icon{
+    color: #fbfbfb;
     width: 70% !important;
     padding: 3px;
     height: 70% !important;
-    background-color: #02a18b;
-    border: 1px solid #02a18b;
+    background-color: #2d353c;
+    border: 1px solid #2d353c;
     border-radius: 50%;
 }
 
-.font-16{
-    font-size: 16px;
+.font-14{
+    font-size: 14px;
     line-height: 2;
     .MuiInputBase-root{
         input{
-            font-size: 16px;
+            font-size: 14px;
             line-height: 1.5;
         }
     }
 }
 
 .font-22{
-    font-size: 22px;
+    font-size: 18px;
     line-height: 1.5;
 }
 
 .font-30{
-    font-size: 30px;
+    font-size: 20px;
     line-height: 1.5;
 }
 
 .color-1{
-    color: #02a18b !important;
+    color: #2d353c !important;
     .MuiInputBase-root {
         input {
-            color: #02a18b !important;
+            color: #2d353c !important;
         }
     }
 }
@@ -119,15 +119,23 @@
     .MuiInputBase-root{
         .MuiInputBase-input{
             // // border-bottom:1px dotted #000;
-            text-decoration: underline 1px dotted ;
-            line-height: 2;
-            text-underline-offset: 5px;
-            // background-attachment: local;
-            // background-image:
-            //     linear-gradient(to right, transparent 10px, transparent 10px),
-            //     linear-gradient(to left, transparent 10px, transparent 10px),
-            //     repeating-linear-gradient(transparent, transparent 30px, #ccc 30px, transparent 31px);
-            // line-height: 31px;
+            // text-decoration: underline 1px dotted ;
+            // line-height: 2;
+            // text-underline-offset: 5px;
+            background-attachment: local;
+            background-image:
+                linear-gradient(to right, transparent 10px, transparent 10px),
+                linear-gradient(to left, transparent 10px, transparent 10px),
+                repeating-linear-gradient(transparent, transparent 30px, #ccc 30px, transparent 31px);
+            line-height: 31px;
+        }
+        input{
+            background-attachment: local;
+            background-image:
+                linear-gradient(to right, transparent 10px, transparent 10px),
+                linear-gradient(to left, transparent 10px, transparent 10px),
+                repeating-linear-gradient(transparent, transparent 30px, #ccc 30px, transparent 31px);
+            line-height: 31px;
         }
     }
 }
