--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -9,27 +9,34 @@
 }
 
 .button-confirm {
-  background-color: #7467ef !important;
+  background-color: #2e7d32 !important;
+  color: #fbfbfb !important;
   :hover {
     opacity: 0.7;
   }
 }
 
 .button-confirm1 {
-  background-color: #339999 !important;
+  background-color: #1976d2 !important;
+  color: #fbfbfb !important;
   :hover {
     opacity: 0.7;
   }
 }
 
 .button-cancel {
-  background-color: #ff9e43 !important;
-  :hover {
-    opacity: 0.7;
+  background-color: #fbfbfb !important;
+  color: #1976d2 !important;
+  border: 1px solid #1976d2;
+  &:hover {
+    color: #fbfbfb !important;
+    .MuiTouchRipple-root{
+      background-color: #1976d2 !important;
+    }
   }
 }
 .button-cancel1 {
-  background-color: #f44336 !important;
+  color: #f44336 !important;
   :hover {
     opacity: 0.7;
   }
