--- a/client/src/app/scenes/leadership_pending/Dialog/Dialog.scss
+++ b/client/src/app/scenes/leadership_pending/Dialog/Dialog.scss
@@ -1,12 +1,12 @@
 
 .backgroundColor1{
-    background-color: #2d353c;
+    background-color: #0D4C92;
 }
 
 .title{
     font-size: 28px;
     text-align: center;
-    color: #2d353c;
+    color: #0D4C92;
     text-transform: uppercase;
 }
 
@@ -36,6 +36,12 @@
                 linear-gradient(to left, transparent 10px, transparent 10px),
                 repeating-linear-gradient(transparent, transparent 30px, #ccc 30px, transparent 31px);
         }
+        &:hover,  &:focus{
+            background-image:
+            linear-gradient(to right, transparent 10px, transparent 10px),
+            linear-gradient(to left, transparent 10px, transparent 10px),
+            repeating-linear-gradient(transparent, transparent 30px, #000 30px, transparent 31px);
+        }
     }
     font-size: 25px;
     font-weight: 600;
@@ -45,7 +51,7 @@
 .name{
     font-size: 28px;
     letter-spacing: 3.2px;
-    color: #2d353c;
+    color: #0D4C92;
     text-transform: uppercase;
 }
 
@@ -54,17 +60,17 @@
     width: 70% !important;
     padding: 3px;
     height: 70% !important;
-    background-color: #2d353c;
-    border: 1px solid #2d353c;
+    background-color: #0D4C92;
+    border: 1px solid #0D4C92;
     border-radius: 50%;
 }
 
-.font-14{
-    font-size: 14px;
+.font-15{
+    font-size: 15px;
     line-height: 2;
     .MuiInputBase-root{
         input{
-            font-size: 14px;
+            font-size: 15px;
             line-height: 1.5;
         }
     }
@@ -75,16 +81,20 @@
     line-height: 1.5;
 }
 
+.font-20{
+    font-size: 20px;
+    line-height: 1.5;
+}
 .font-30{
     font-size: 20px;
     line-height: 1.5;
 }
 
 .color-1{
-    color: #2d353c !important;
+    color: #0D4C92 !important;
     .MuiInputBase-root {
         input {
-            color: #2d353c !important;
+            color: #0D4C92 !important;
         }
     }
 }
@@ -118,24 +128,22 @@
 .dotted{
     .MuiInputBase-root{
         .MuiInputBase-input{
-            // // border-bottom:1px dotted #000;
-            // text-decoration: underline 1px dotted ;
-            // line-height: 2;
-            // text-underline-offset: 5px;
+        //     // border-bottom:1px dotted #000;
+        //     // text-decoration: underline 1px dotted ;
+        //     // line-height: 2;
+        //     // text-underline-offset: 5px;
             background-attachment: local;
             background-image:
                 linear-gradient(to right, transparent 10px, transparent 10px),
                 linear-gradient(to left, transparent 10px, transparent 10px),
                 repeating-linear-gradient(transparent, transparent 30px, #ccc 30px, transparent 31px);
             line-height: 31px;
-        }
-        input{
-            background-attachment: local;
-            background-image:
+            &:hover,  &:focus{
+                background-image:
                 linear-gradient(to right, transparent 10px, transparent 10px),
                 linear-gradient(to left, transparent 10px, transparent 10px),
-                repeating-linear-gradient(transparent, transparent 30px, #ccc 30px, transparent 31px);
-            line-height: 31px;
+                repeating-linear-gradient(transparent, transparent 30px, #000 30px, transparent 31px);
+            }
         }
     }
 }
@@ -154,5 +162,12 @@ td, th {
 
 .mr-10{
     margin-right: 10px !important;
+}
+.ml-20{
+    margin-left: 20px !important;
+}
+
+.mt-20{
+    margin-top: 20px !important;
 }
   
