--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -39,3 +39,18 @@
     opacity: 0.7;
   }
 }
+.flex {
+  display: flex;
+  gap: 20;
+}
+.position {
+  background-color: rgb(53, 102, 248);
+  border: 1px solid white;
+  border-radius: 30px;
+  padding: 10px;
+  color: white;
+}
+.icon-left {
+  margin-right: 5px;
+  color: #0d4c92;
+}
