--- a/client/src/app/scenes/leadership_pending/Dialog/Dialog.scss
+++ b/client/src/app/scenes/leadership_pending/Dialog/Dialog.scss
@@ -107,6 +107,10 @@
     text-transform: uppercase;
 }
 
+.pd-60{
+    padding: 0 60px !important;
+}
+
 .pdl-60{
     padding-left: 60px !important;
 }
@@ -170,4 +174,15 @@ td, th {
 .mt-20{
     margin-top: 20px !important;
 }
-  
+
+.position {
+    background-color: rgb(53, 102, 248);
+    border: 1px solid white;
+    border-radius: 30px;
+    padding: 10px;
+    color: white;
+  }
+  .icon-left {
+    margin-right: 5px;
+    color: #0d4c92;
+  }
