--- a/client/src/app/scenes/ME_create/Dialog/Dialog.scss
+++ b/client/src/app/scenes/ME_create/Dialog/Dialog.scss
@@ -166,4 +166,31 @@ td, th {
 .mt-20{
     margin-top: 20px !important;
 }
-  
+
+.custom-file-upload {
+    background-color: #0d4c92 !important;
+  color: #fbfbfb !important;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    margin-top: 10px;
+    padding: 10px 10px;
+    cursor: pointer;
+    &:hover{
+        border: 1px solid var(--primary-color)
+    }
+}
+
+.button-choose-image {
+    display: flex;
+    justify-content: center;
+    align-items: flex-start;
+}
+
+.image-upload{
+    height: 200px;
+    width: 180px;
+    object-fit: cover;
+    padding: 10px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+}
